force-app/main/default/objects/Brand_Mapping__mdt/Brand_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Brand Mapping</label>
    <pluralLabel>Brand Mappings</pluralLabel>
</CustomObject>