force-app/main/default/objects/Brand_Mapping__mdt/fields/Canonical_Brand__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Brand__c</fullName>
    <label>Canonical Brand</label>
    <description>The canonical Product2.Brand__c value this source value maps to (used to match active subscriptions).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>