force-app/main/default/objects/Brand_Mapping__mdt/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Brand Family</label>
    <description>Optional brand-family grouping (e.g. "Specialist Platforms"). A firm holding an active subscription for ANY brand in the same family is a cross-sell target for an enquiry about a sibling title in that family.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>