force-app/main/default/objects/Brand_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <description>Optional qualifier for which inbound field this mapping applies to (e.g. Form.Brand__c, Lead.Lexology_Product__c, Lead.ALM_Product_Interest__c). Blank = matches any field.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>