force-app/main/default/objects/Brand_Mapping__mdt/fields/Source_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Value__c</fullName>
    <label>Source Value</label>
    <description>Inbound brand/product value from a Lead field or Pardot form (e.g. "Lexology PRO", "Lexology In-Depth", "Law.com").</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>